<?xml version="1.0" encoding="utf-8"?>
<com.github.clans.fab.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fab_transaction"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/fab_add_expense"
    fab:fab_colorNormal="@color/fab_ripple"
    fab:fab_colorPressed="@color/fab_button_pressed"
    fab:fab_label="Add Transactions"
    fab:fab_size="mini"
    fab:menu_labels_textColor="@color/secondary_text_55alpha"
    fab:menu_labels_textSize="12sp"/>