<?xml version="1.0" encoding="utf-8"?>
<com.github.clans.fab.FloatingActionMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:trakr="http://schemas.android.com/tools"
    android:id="@+id/fab_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    fab:fab_size="mini"
    android:src="@drawable/fab_add"
    android:visibility="visible"
    fab:fab_colorRipple="@color/fab_ripple"
    fab:menu_backgroundColor="@color/background_fab_open"
    fab:menu_colorNormal="@color/dashboard_primary"
    fab:menu_colorPressed="@color/dashboard_primary"
    fab:menu_colorRipple="#99FFFFFF"
    fab:menu_labels_colorNormal="#333333"
    trakr:fab_colorNormal="@color/dashboard_background_color"
    trakr:layout_anchorGravity="bottom|right"
    >

    <include layout="@layout/fab_add_budget"/>

    <include layout="@layout/fab_add_transaction"/>

</com.github.clans.fab.FloatingActionMenu>