...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/amount_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/rupee"
            android:hint="Enter Amount"
            android:inputType="numberDecimal"
            android:maxLength="15"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/category_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:drawableLeft="@drawable/category_edittext"
            android:focusable="false"
            android:hint="Select Category"
...
