<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Animation.AppCompat.Dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#467fd9"
        android:padding="20dp"
        android:text="Add Cash Transactions"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        android:typeface="sans" />

    <EditText
        android:id="@+id/addAmt"
        style="@style/Base.Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="INR"
        android:inputType="number"
        android:padding="20dp" />

    <Spinner
        android:id="@+id/description"
        style="@style/Base.Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#467fd9"
        android:padding="10dp"
        android:text="SAVE"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        android:typeface="normal" />

</LinearLayout>